# Sentri

./: .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  CLI_IMPLEMENTATION_COMPLETE.md  CODE_OF_CONDUCT.md  COMMAND_VERIFICATION_REPORT.md  COMPLETE_TEST_DIAGNOSTIC.md  CONTRIBUTING.md  CRATE_PUBLICATION_VERIFICATION.md  Cargo.toml  DOCS_MANIFEST.md  ENHANCED_VIOLATION_REPORTING.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY_v0.3.md  IMPLEMENTATION_v0_3_0.md  INDEX_v0_3_0.md  INSTALL.md  LICENSE  PHASE_C_IMPLEMENTATION_GUIDE.md  PUBLISHING.md  QUICK_REFERENCE_v0_3_0.md  README.md  README_v0_3_0.md  RELEASE_v0_3_0.md  SECURITY.md  SECURITY_SCAN_REPORT_ISSUES.md  SENTRI_WEB_REVIEW.md  START_HERE_v0.3.md  TEST_FAILURE_ANALYSIS.md  WORKFLOW_UPDATES_v0.1.md  build.rs  codecov.yml  push.sh  push_output.txt  test_vulnerable_solana.rs  v0_3_0_STATUS_UPDATE.md
benches/: benchmarks.rs
crates/analyzer/evm/: Cargo.toml  README.md
crates/analyzer/evm/src/: analyzer.rs  ast.rs  ast_types.rs  ast_walker.rs  bytecode.rs  cfg.rs  dataflow.rs  errors.rs  lib.rs  semantic_model.rs  symbolic.rs
crates/analyzer/evm/src/detectors/: aa_entropy_weakness.rs  access_control.rs  arbitrary_call_msg_value.rs  arbitrary_function_selector_dispatch.rs  arithmetic_rounding.rs  bridge_address_cryptographic_verify.rs  constructor_race_condition.rs  cross_chain_replay_missing_chainid.rs  detector_trait.rs  dvn_single_point.rs  eip7702_eoa_assumption.rs  erc4337_validation_side_effects.rs  erc4626_inflation_protection.rs  fee_on_transfer_incompatibility.rs  flash_loan.rs  health_check.rs  implementations.rs  insufficient_multisig_threshold.rs  lst_depeg.rs  merkle_root.rs  mod.rs  oracle_self_trade.rs  overflow.rs  proxy_storage_collision.rs  readonly_reentrancy.rs  reentrancy.rs  reentrancy_via_whitelisted.rs  router_slippage_validation.rs  signature_replay_protection.rs  stale_oracle_price.rs  state_mutation_ordering.rs  synthetic_collateral_oracle.rs  synthetic_mint.rs  token_balance_manipulation.rs  unbounded_pricing_input.rs  upgrade_path_verification.rs
crates/analyzer/evm/tests/: ast_analysis.rs
crates/analyzer/move/: Cargo.toml  README.md  build.rs
crates/analyzer/move/src/: analyzer.rs  detectors.rs  lib.rs  move_manual_overflow_check.rs  move_resource_destruction.rs  move_type_safety_violation.rs  semantic_model.rs  tree_sitter_grammar.rs
crates/analyzer/solana/: Cargo.toml  README.md
crates/analyzer/solana/src/: analyzer.rs  anchor_model.rs  anchor_parser.rs  detectors.rs  lib.rs  semantic_model.rs  solana_durable_nonce.rs  solana_fake_sysvar_instruction.rs  solana_pda_authority_validation.rs  solana_rent_exemption.rs  solana_unchecked_token_account.rs
crates/analyzer/solana/tests/: anchor_false_positives.rs
crates/analyzer/soroban/: Cargo.toml  README.md
crates/analyzer/soroban/src/: analyzer.rs  detectors.rs  lib.rs  semantic_model.rs  soroban_model.rs  soroban_parser.rs
crates/analyzer/soroban/tests/: soroban_fixtures.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/ui/: banner.rs  constants.rs  doctor.rs  error.rs  header.rs  init.rs  mod.rs  passed.rs  progress.rs  summary.rs  utils.rs  violation.rs
crates/cli/tests/: cli.rs  common.rs  integration.rs  property.rs  security.rs  unit.rs
crates/cli/tests/cli/: mod.rs
crates/cli/tests/fixtures/: test_simple_vulnerable.rs  test_vulnerable_evm.sol  test_vulnerable_move.move
crates/cli/tests/integration/: mod.rs
crates/cli/tests/property/: mod.rs
crates/cli/tests/security/: mod.rs
crates/cli/tests/unit/: ast_pattern_matching.rs  mod.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: account_abstraction.rs  analysis_context.rs  attack_patterns.rs  changelog.rs  config.rs  dvn_fuzzer.rs  error.rs  evaluator.rs  finding.rs  fuzzer.rs  health_check_fuzzer.rs  integration_testing.rs  lib.rs  merkle_root_fuzzer.rs  model.rs  oz_integration.rs  security_validator.rs  synthetic_mint_fuzzer.rs  test_infrastructure.rs  threat_model.rs  traits.rs  type_checker.rs  types.rs
crates/core/src/registry/: exploits.json  mod.rs
crates/dsl_parser/: Cargo.toml  README.md
crates/dsl_parser/src/: grammar.rs  lexer.rs  lib.rs  parser.rs
crates/dynamic/core/: Cargo.toml  README.md
crates/dynamic/core/src/: abi_encode.rs  backend.rs  invariant.rs  lib.rs  poc.rs  sequence.rs  shrink.rs  testing.rs  trace.rs  u256.rs
crates/dynamic/evm/: Cargo.toml  README.md
crates/dynamic/evm/src/: backend.rs  lib.rs  reentrancy_inspector.rs  rpc.rs  solc_bridge.rs  types.rs  well_known_selectors.rs
crates/dynamic/solana/: Cargo.toml  README.md
crates/dynamic/solana/src/: backend.rs  config.rs  fuzz.rs  generator.rs  idl.rs  invariant.rs  lib.rs  litesvm_backend.rs  litesvm_e2e.rs  model.rs  testing.rs
crates/generator/evm/: Cargo.toml  README.md
crates/generator/evm/src/: generator.rs  lib.rs
crates/generator/move/: Cargo.toml  README.md
crates/generator/move/src/: generator.rs  lib.rs
crates/generator/solana/: Cargo.toml  README.md
crates/generator/solana/src/: generator.rs  lib.rs
crates/generator/solana_macro/: Cargo.toml  README.md
crates/generator/solana_macro/src/: lib.rs
crates/invariant_library/: Cargo.toml  README.md
crates/invariant_library/src/: lib.rs  library.rs  loader.rs
crates/ir/: Cargo.toml  README.md
crates/ir/src/: analyzer_result.rs  ast.rs  lib.rs  rules.rs  semantic.rs
crates/report/: Cargo.toml  README.md
crates/report/src/: formatter.rs  formatter_ansi.rs  lib.rs  report.rs  security_report.rs
crates/simulator/: Cargo.toml  README.md
crates/simulator/src/: engine.rs  evm_runtime.rs  flash_loan_sim.rs  fuzzer.rs  lib.rs
crates/simulator/tests/: evm_fuzzing.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: lib.rs  logging.rs  path_utils.rs  release.rs  solc.rs  version.rs
docs/: CI_INTEGRATION.md  DSL_REFERENCE.md  INVARIANT_LIBRARY.md  QUICKSTART.md  aa_execution_phases.md  architecture-overview.md  ci-integration.md  completion-status.md  deployment.md  example-invariants.md  faq.md  getting-started.md  migration.md  testing.md  (+4 more)
(+157 files in other folders)
