[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/dsl_parser",
    "crates/ir",
    "crates/analyzer/solana",
    "crates/analyzer/evm",
    "crates/analyzer/move",
    "crates/generator/solana",
    "crates/generator/solana_macro",
    "crates/generator/evm",
    "crates/generator/move",
    "crates/invariant_library",
    "crates/report",
    "crates/simulator",
    "crates/utils",
]

resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2021"
rust-version = "1.75"
authors = ["Sentri Contributors"]
license = "MIT"
homepage = "https://github.com/geekstrancend/Sentri"
repository = "https://github.com/geekstrancend/Sentri"

[workspace.dependencies]
# Internal crates
sentri-core = { path = "crates/core", version = "0.1.7" }
sentri-utils = { path = "crates/utils", version = "0.1.7" }
sentri-ir = { path = "crates/ir", version = "0.1.7" }
sentri-dsl-parser = { path = "crates/dsl_parser", version = "0.1.7" }
sentri-analyzer-solana = { path = "crates/analyzer/solana", version = "0.1.7" }
sentri-analyzer-evm = { path = "crates/analyzer/evm", version = "0.1.7" }
sentri-analyzer-move = { path = "crates/analyzer/move", version = "0.1.7" }
sentri-generator-solana = { path = "crates/generator/solana", version = "0.1.7" }
sentri-solana-macro = { path = "crates/generator/solana_macro", version = "0.1.7" }
sentri-generator-evm = { path = "crates/generator/evm", version = "0.1.7" }
sentri-generator-move = { path = "crates/generator/move", version = "0.1.7" }
sentri-library = { path = "crates/invariant_library", version = "0.1.7" }
sentri-report = { path = "crates/report", version = "0.1.7" }
sentri-simulator = { path = "crates/simulator", version = "0.1.7" }

# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Parsing
pest = "2.7"
pest_derive = "2.7"
nom = "7.1"

# Terminal UI
terminal_size = "0.3"

# Solana
solana-program = "1.18"
solana-sdk = "1.18"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.0"

# Testing & fuzzing
proptest = "1.4"
rand = { version = "0.8", features = ["small_rng"] }
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.34", features = ["json"] }
criterion = { version = "0.5" }
tempfile = "3.8"

# Parallel processing
rayon = "1.7"

# Utilities
regex = "1.10"
log = "0.4"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true