[package]
name = "invar-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "invar"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
colored.workspace = true
invar-core.workspace = true
invar-ir.workspace = true
invar-dsl-parser.workspace = true
invar-utils.workspace = true
invar-library.workspace = true
invar-report.workspace = true
invar-analyzer-solana.workspace = true
invar-analyzer-evm.workspace = true
invar-analyzer-move.workspace = true
invar-generator-solana.workspace = true
invar-generator-evm.workspace = true
invar-generator-move.workspace = true
invar-simulator.workspace = true

[dev-dependencies]
