[package]
name = "sentri-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = truedescription = "Sentri CLI tool for blockchain invariant checking"
[[bin]]
name = "sentri"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
colored.workspace = true
terminal_size.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-dsl-parser.workspace = true
sentri-utils.workspace = true
sentri-library.workspace = true
sentri-report.workspace = true
sentri-analyzer-solana.workspace = true
sentri-analyzer-evm.workspace = true
sentri-analyzer-move.workspace = true
sentri-generator-solana.workspace = true
sentri-generator-evm.workspace = true
sentri-generator-move.workspace = true
sentri-simulator.workspace = true

[dev-dependencies]
