[package]
name = "sentri-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and utilities for Sentri invariant checking framework"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sentri-core"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
regex.workspace = true

[dev-dependencies]
proptest.workspace = true
