[package]
name = "sentri-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: Core types and utilities for the Sentri multi-chain smart contract security analyzer."

keywords = ["sentri", "solana", "security", "smart-contracts", "static-analysis"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-core"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
regex.workspace = true

[dev-dependencies]
proptest.workspace = true
