[package]
name = "sentri-dsl-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DSL parser for Sentri invariant definitions"
readme = "README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
pest.workspace = true
pest_derive.workspace = true
sentri-ir.workspace = true
sentri-core.workspace = true

[dev-dependencies]
