[package]
name = "sentri-dsl-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: DSL parser for Sentri invariant definitions and security specification syntax."

keywords = ["sentri", "solana", "security", "smart-contracts", "static-analysis"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-dsl-parser"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
pest.workspace = true
pest_derive.workspace = true
sentri-ir.workspace = true
sentri-core.workspace = true

[dev-dependencies]
