[package]
name = "sentri-library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standard library of invariants for Sentri framework"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sentri-library"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-dsl-parser.workspace = true

[dev-dependencies]
