[package]
name = "sentri-library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: Standard library of security invariants for the Sentri multi-chain security analyzer."

keywords = ["sentri", "solana", "security", "smart-contracts", "static-analysis"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-library"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-dsl-parser.workspace = true

[dev-dependencies]
