[package]
name = "sentri-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Intermediate representation for Sentri invariant specifications"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sentri-ir"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sentri-core.workspace = true

[dev-dependencies]
