[package]
name = "sentri-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: Intermediate representation for Sentri invariant specifications and security analysis."

keywords = ["sentri", "solana", "security", "smart-contracts", "static-analysis"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-ir"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sentri-core.workspace = true

[dev-dependencies]
