[package]
name = "invar-report"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
invar-core = { path = "../core" }
invar-ir = { path = "../ir" }
chrono.workspace = true

[dev-dependencies]
