[package]
name = "sentri-report"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Report generation for Sentri invariant violations"
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
chrono.workspace = true

[dev-dependencies]
