[package]
name = "sentri-report"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: Report generation for Sentri security analysis violations and findings."

keywords = ["sentri", "solana", "security", "smart-contracts", "static-analysis"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-report"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
chrono.workspace = true

[dev-dependencies]
