[package]
name = "sentri-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transaction simulator for Sentri invariant testing"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sentri-simulator"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
rand.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
