[package]
name = "sentri-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: Transaction simulator for Sentri invariant testing and code generation validation."

keywords = ["sentri", "solana", "security", "smart-contracts", "static-analysis"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-simulator"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
rand.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
