[package]
name = "sentri-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Utility functions for Sentri framework"
readme = "README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[dev-dependencies]
