[package]
name = "sentri-analyzer-evm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EVM analyzer for Sentri invariant checking"
readme = "README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
regex.workspace = true

[dev-dependencies]
