[package]
name = "sentri-analyzer-evm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: EVM smart contract analyzer with static analysis and invariant checking for Ethereum, Polygon, and other EVM chains."

keywords = ["sentri", "evm", "security", "smart-contracts", "static-analysis"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-analyzer-evm"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
regex.workspace = true
solc.workspace = true
petgraph.workspace = true
rayon.workspace = true
tempfile = "3"

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
criterion.workspace = true
