[package]
name = "sentri-analyzer-move"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Move analyzer for Sentri invariant checking"
readme = "README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true

[dev-dependencies]
