[package]
name = "sentri-analyzer-move"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Move analyzer for Sentri invariant checking"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sentri-analyzer-move"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true

[dev-dependencies]
