[package]
name = "sentri-analyzer-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Solana analyzer for Sentri invariant checking"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
