[package]
name = "sentri-dynamic-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: chain-agnostic dynamic/coverage-guided invariant fuzzing engine (execution backend, call-sequence generation, shrinking, invariant oracles)."

keywords = ["sentri", "fuzzing", "invariant", "security", "dynamic-analysis"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-dynamic-core"

[dependencies]
rand.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
