[package]
name = "sentri-dynamic-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: dynamic invariant fuzzing for Solana programs (account-model execution + invariant oracles)."

keywords = ["sentri", "solana", "fuzzing", "invariant", "security"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-dynamic-solana"

# The real execution backend (feature `litesvm-backend`) is intentionally NOT
# in 0.4.0. It links a Solana SVM via `litesvm 0.6`, whose transitive
# dependencies carry unpatched RUSTSEC advisories (ed25519-dalek 1.0.1,
# curve25519-dalek 3.2.0, rustls-webpki 0.101.7); litesvm 0.14 clears them but
# doesn't yet build against a resolvable solana-keypair/bs58 combination. A
# security tool must not ship known-vulnerable crypto, so the backend and its
# deps are held out until that resolves (tracked for 0.5.0). The backend source
# lives in git history at the 0.3.x line.
#
# Everything else — the account-model call types, invariant oracles, sequence
# generation, shrinking, PoC formatting, the Anchor IDL front-end and the
# fuzz-plan config — is chain-native pure Rust and ships here, proven against an
# in-memory mock exactly as the EVM crate proved its engine before wiring revm.

[dependencies]
sentri-dynamic-core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2 = "0.10"
bs58 = "0.5"

[dev-dependencies]
