[package]
name = "sentri-generator-evm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code generator for EVM smart contracts using Sentri invariants"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sentri-generator-evm"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
sentri-analyzer-evm.workspace = true

[dev-dependencies]
