[package]
name = "sentri-generator-move"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code generator for Move modules using Sentri invariants"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
sentri-analyzer-move.workspace = true

[dev-dependencies]
