[package]
name = "sentri-generator-move"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code generator for Move modules using Sentri invariants"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sentri-generator-move"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
sentri-analyzer-move.workspace = true

[dev-dependencies]
