[package]
name = "sentri-generator-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
sentri-analyzer-solana.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
proptest.workspace = true
