[package]
name = "sentri-generator-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Sentri: Code generator for Solana programs using Sentri invariants and security constraints."

keywords = ["sentri", "solana", "security", "smart-contracts", "codegen"]
categories = ["development-tools", "development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/sentri-generator-solana"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sentri-core.workspace = true
sentri-ir.workspace = true
sentri-utils.workspace = true
sentri-analyzer-solana.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
proptest.workspace = true
