[package]
name = "sentri-solana-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macros for Sentri Solana code generation"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sentri-solana-macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
